adjust the overall width of website to ensure the three current sections fit without any additional white space.

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ tr {
 }
 
 #horizontal_wrap {
-    width: 5000px;
+    width: 4000px;
     position: absolute;
     top: 0;
     left: 0;
